[package]
name = "roxy"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[features]
default = [
    "controller",
    "dns",
    "bloom-trie",
    "tracing/max_level_debug"
]

controller = [
    "serde_json"
]
dns = []
bloom-trie = ["bloom"]
set-trie = []

[workspace]
members = [
    "lib/cron",
    "lib/resolver",
    "lib/shadowsocks",
]

[dependencies]
base64 = { version = "0.13.0" }
byteorder = { version = "1.4.3", default-features = false }
byte_string = { version = "1.0.0" }
libc = { version = "0.2.127" }
lru-cache = { version = "0.1.2" }
memchr = { version = "2.5.0" }
num_cpus = { version = "1.13.1" }
parking_lot = { version = "0.12.1" }
pin-project-lite = { version = "0.2.9" }
publicsuffix = { git = "https://github.com/f1shl3gs/publicsuffix.git" }
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = { version = "1.0.85", optional = true }
serde_yaml = { version = "0.9.4" }
shadowsocks = { path = "lib/shadowsocks" }
thiserror = { version = "1.0.34" }

# Allocator
# scudo/static must be used for aarch64-unknown-linux-musl
scudo = { git = "https://github.com/f1shl3gs/rust-scudo", optional = true, features = ["static"] }

# Log
resolver = { path = "lib/resolver" }
tracing = { version = "0.1.36", default-features = false }

# DNS
trust-dns-proto = { version = "0.22.0" }
trust-dns-resolver = { version = "0.22.0", default-features = false, features = ["tokio-runtime"] }
bloom = { version = "0.3.2", optional = true }

# HTTP
hyper = { version = "0.14.20", default-features = false, features = ["client", "http1", "server", "tcp", "stream"] }
hyper-rustls = { version = "0.23.0", default-features = false, features = ["http1", "native-tokio" ] }

# Async
futures = { version = "0.3.24", default-features = false, features = ["async-await"] }
futures-util = { version = "0.3.24" }
tokio = { version = "1.21.0", default-features = false, features = [ "net", "time", "macros", "signal" ] }
tokio-util = { version = "0.7.3", default-features = false, features = ["io"] }
