[package]
name = "roxy"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 2
panic = "abort"
strip = true
lto = "fat"
codegen-units = 1

[features]
default = [
    "controller",
    "dns",
    "set-trie",
    "tracing/max_level_debug"
]

controller = [
    "serde_json"
]
dns = []
bloom-trie = ["bloom"]
set-trie = []

[workspace]
members = [
    "lib/crypto",
    "lib/cron",
    "lib/resolver",
    "lib/shadowsocks",
    "tools/aes-bench",
]

[dependencies]
base64 = { version = "0.21.0" }
byteorder = { version = "1.4.3", default-features = false }
byte_string = { version = "1.0.0" }
humanize = { git = "https://github.com/f1shl3gs/humanize", default-features = false, features = ["duration", "serde"], rev="765041c" }
libc = { version = "0.2.140" }
lru-cache = { version = "0.1.2" }
memchr = { version = "2.5.0" }
num_cpus = { version = "1.15.0" }
parking_lot = { version = "0.12.1" }
pin-project-lite = { version = "0.2.9" }
publicsuffix = { git = "https://github.com/f1shl3gs/publicsuffix.git" }
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = { version = "1.0.94", optional = true }
serde_yaml = { version = "0.9.19" }
shadowsocks = { path = "lib/shadowsocks" }
thiserror = { version = "1.0.39" }
url = { version = "2.3.1" }

# Allocator
# scudo/static must be used for aarch64-unknown-linux-musl
scudo = { git = "https://github.com/f1shl3gs/rust-scudo", optional = true, features = ["static"] }

# Log
resolver = { path = "lib/resolver" }
tracing = { version = "0.1.37", default-features = false }

# DNS
trust-dns-proto = { version = "0.22.0" }
trust-dns-resolver = { version = "0.22.0", default-features = false, features = ["tokio-runtime", "dns-over-rustls"] }
bloom = { version = "0.3.2", optional = true }

# HTTP
hyper = { version = "0.14.24", default-features = false, features = ["client", "http1", "server", "tcp", "stream"] }
hyper-rustls = { version = "0.23.2", default-features = false, features = ["http1", "native-tokio" ] }

# Async
futures = { version = "0.3.26", default-features = false, features = ["async-await"] }
tokio = { version = "1.26.0", default-features = false, features = [ "net", "time", "macros", "signal" ] }
futures-util = { version = "0.3.27" }
tokio-util = { version = "0.7.7", default-features = false, features = ["io"] }
