[package]
name = "shadowsocks"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dev-dependencies]
tokio = { version = "1.21.0", default-features = false, features = ["net", "macros"] }
trust-dns-resolver = { version = "0.22.0" }

[dependencies]
base64 = { version = "0.13.0" }
bytes = { version = "1.2.1" }
byte_string = { version = "1.0.0" }
futures = { version = "0.3.24", default-features = false, features = ["async-await"] }
libc = { version = "0.2.127" }
lru-cache = { version = "0.1.2" }
percent-encoding = { version = "2.1.0" }
pin-project-lite = { version = "0.2.9" }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
resolver = { path = "../resolver" }
socket2 = { version = "0.4.4" }
thiserror = { version = "1.0.34" }
tokio = { version = "1.21.0", default-features = false, features = ["net"] }
tracing = { version = "0.1.36", default-features = false }
url = { version = "2.2.2" }

# Ciphers & Crypto
aes-gcm = {version = "0.10.1", default-features = false, features = ["aes"] }
blake3 = { version = "1.3.1" }
chacha20poly1305 = { version = "0.10.1", features = [ "reduced-round" ] }
hkdf = { version = "0.12.3" }
sha1 = { version = "0.10.4", features = ["asm"] }

[target."cfg(target_arch = \"x86_64\")".dependencies]
md-5 = { version = "0.10.4", features = ["asm"] }
[target."cfg(target_arch = \"aarch64\")".dependencies]
md-5 = { version = "0.10.4" }